# GTecton

./: CMakeLists.txt  Changelog  INSTALL  LICENSE  README
cmakeModules/: CorrectWindowsPaths.cmake  FindMETIS.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  ResolveCompilerPaths.cmake
documentation/changelog/: changelog.aux  changelog.tex  makefile
documentation/man/cat1/: axiplt.1  elmside.1  gmsh2tecton.1  mergefiles.1  opn.1  partition.1  plnplt.1  polysort.1  setarea.1  showme.1  tecinbuilder.1  triangle.1
documentation/man/cat3/: csystem.3  dtime.3  exitp.3  fdate.3  flush.3  fnblnk.3  hostname.3  howtouse.3  lnblk.3  rm.3  signalc.3  stat.3  triangulate.3
documentation/man/cat7/: axi.7  f3d.7  opn.7  pln.7
documentation/man/man1/: -  Makefile  axi.1  axi.1c  axiplt.1  elmside.1  f3d.1  f3d.1c  getarea.1  getarea.1c  gmsh2tecton.1  gtecton.1  gtecton.1c  mergefiles.1c  opn.1  opnplt.1  opnplt.1c  partition.1  picknps.1  picknps.1c  pln.1  pln.1c  plt3d.1  plt3d.1c  polysort.1  setarea.1  setprem.1  setprem.1c  showme.1  tecinbuilder.1  tri2fe.1  tri2fe.1c  triangle.1
documentation/man/man3/: Makefile  csystem.3  dtime.3  exitp.3  fdate.3  flush.3  fnblnk.3  hostname.3  howtouse.3  rm.3  signalc.3  stat.3  traper.3  triangulate.3
documentation/man/man7/: Makefile  axi.7  f3d.7  input  opn.7  pln.7
documentation/man/manl/: f3d.l  pln.l  plnplt.l
examples/tutorial/testCases/01_flexingBeam/: compareDisp.gmt  domain.poly  flexure.f  makefile  midline.plnplt  setbcs  tecin.sh
src/01_meshing/2D/triangle/: showme.c  triangle.c  tricall.c
src/01_meshing/2D/triangle-helpers/: colorize.c  domainUnity.F  getarea.f  globals.mod  makefile  opt2fe.c  reorder.c  setarea.f  sysminmax.mod  temp  test.c  tri2fe.f  tri2opt.f
src/01_meshing/2D/triangle/.deps/: showme.Po  (+1 more)
src/01_meshing/3D/gmsh-helpers/: GmshToTecton.F  PartitionedGmshToTecton.F  getnormals.f90  partitionInterfaceCount.f  readme.txt  rmdoubles.F  rmdoubles_i12.F  rmdoubles_i5.F  rmdoubles_i8.F  setprem.f90
src/01_meshing/testMeshes/fullCircle/: buildDomain.f  makefile
src/01_meshing/testMeshes/quarterCircle/: buildDomain.f  makefile
src/01_meshing/testMeshes/testMeshCircleSection/: .gmt_bb_info  .gmtcommands4  .gmtdefaults4  domain.1.ele  domain.1.node  domain.1.poly  domain.poly  makefile  mesh.gmt  mesh.vtu  partition.info  partitions.ps  tecin.dat.elm  tecin.dat.nps  tecin.dat.partf.elm  tecin.dat.partf.nps  trialMesh2D  trialMesh2D.f
src/01_meshing/testMeshes/testMeshRectangular/: .gmtdefaults4  README  color.cpt  makefile  mesh.plnplt  mesh.vtu  partition.info  partitions.ps  tecin.dat.elm  tecin.dat.nps  tecin.dat.partf.elm  tecin.dat.partf.nps  trialMesh2D  trialMesh2D.f  trialMesh3D.f
src/02_partitioning/SHRIMP/: MPIhandling.F  countBorders.f  distance.F  enumerates.F  files.F  findNeighbors.F  geometry.F  makefile  matchElements.F  meshData.F  readInput.F  shrimp.F  splitPointCloud.F  writeOutput.F
src/02_partitioning/partition/: partition.c  partition2paraview.f  partition3D.c
src/03_preprocessing/: picknps.c  polysort.f
src/03_preprocessing/elmside/: algorithm1_circleCenters.f  algorithm2_classic.f  algorithm3_classic.f  elmside.F  globals.f  inside.F  numInArray.f  readCommandLineArgs.f  readInput.f  stringHandling.f  writeOutput.f
src/04_simulating/2D/axi/: axilib.F
src/04_simulating/2D/opn/: .Makefile  OLDopnlib.F  effe.F  opnlib.F
src/04_simulating/2D/pln/: Nquad.eps  Ntri.eps  cmd.p  dNdx_quad.eps  dNdx_tri.eps  dNdy_quad.eps  dNdy_tri.eps  plnlib.F  tst.F
src/04_simulating/3D/f3d/: .Makefile  f3dlib.F  f3dlib_brick.F  f3dlib_common.F  f3dlib_tet.F
src/04_simulating/general/: AOmodule.F  PETScmodule.F  addan.F  algebra.F  constants.F  conversions.F  coord.i  debugmodule.F  documentation.F  elastc.F  errorModule.F  extremamodule.F  filemodule.F  formatsmodule.F  frictionmodule.F  getfil.F  ghostElements.f  gitModule.F  gtecton.F  iomodule.F  labelmodule.F  materialsmodule.F  meshdatamodule.F  modelTopology.F  modelctx.F  modeldatamodule.F  modeldefinition.F  postProcessData.F  rdthrm.F  regrid.F  setio.F  setprp.F  steady.F  tecdat.F  tecin.F  temp0.F  tempdat.F  testmodule.F  timestepmodule.F  timsol.F  (+3 more)
src/05_merging/: mergermodule.F  mergers.F
src/06_postprocessing/2D/: pnpoly.in  recont.pl  symbl.p
src/06_postprocessing/2D/axi/: axicon.F  axieff.F  axigrav.F  axiplot.F
src/06_postprocessing/2D/general/: abbrev.F  arrow.F  bc.F  bufcmd2D.F  contur.F  displ.F  dt.F  elmsys.F  feplt2D.F  flux.F  igetcmd2D.F  lenchar.i  makeij.F  mats.F  parseCommandLineArguments2D.F  partitionBoundaries.F  pltdef2D.F  pltinp.F  pltio.F  pltout.F  postel.F  regrid.F  regriddata.F  sample2d.F  setcmd2D.F  setio.F  setmon2D.F  setpltio.F  show2D.F  shvar2D.F  strain.F  stress.F  timinc2D.F  trian.F  varfit2D.F  xaf.f  xeclib2D.F
src/06_postprocessing/2D/opn/: opncon.F  opneff.F  opngrav.F  opnplot.F
src/06_postprocessing/2D/pln/: plncon.F  plneff.F  plngrav.F  plnplot.F
src/06_postprocessing/3D/: abbrev.F  base64encode.F  bufcmd3D.F  calcs.F  contour.F  ebc.F  echo.F  effe  error.f  feio.F  feplt3D.F  grav3D.F  igetcmd3D.F  infrot.F  iprinfo.F  lenchar.i  ofclose.F  ofopen.F  oneTetrahedron.vtu  output.base64  parseCommandLineArguments3D.F  pltcon.F  pltdef3D.F  pnpoly.in  pnpoly3d.F  readGmsh.F  resample.f  sample.F  setcmd3D.F  setmon3D.F  show3D.F  shvar3D.F  tacoFault  tacoFault.f  timinc3D.F  updatefault.F  useEncode.F  varfit3D.F  vtk_temp.F  vtkmodule.F  (+9 more)
src/06_postprocessing/3D/.deps/: wrdx.Po
src/lib_misc/: AsciF.F  adjustl.F  atan.F  cartopolar.F  chreal.F  closef.F  cstat.c  csystem.c  cwd.c  diffusion.f  dirname.F  encodeBase64.c  exitp.F  exitpc.c  fbopen.F  float.F  flushc.c  flushf.F  fnblnk.F  gethome.c  getwdir.F  how2use.F  ifbopen.F  iflu.F  ifopen.F  indx.F  inmax.F  input.F  intchr.F  ipeven.f  isbinary.c  lnblk.F  lueof.F  nextlu.F  nint.F  numeric.F  odd.F  openf.F  pdt.c  pnpoly  (+13 more)
src/tools/: Makefile  Maxwell.f  README_subd  chbtot.F  chkccy.F  monfv.F  normal.F  setaij.F  shlcrd.f  skyline.F  svdsolve.F  testaij.F  timestep.f  unlock2.F
(+151 files in other folders)
